tests/ui/fail/bad_items.stderr
error: `#[with]` can only be applied to an `fn`, a `trait`, or an `impl`.
  --> $DIR/bad_items.rs:30:5
   |
30 |     #[with]
   |     ^^^^^^^

error: `#[with]` can only be applied to an `fn`, a `trait`, or an `impl`.
  --> $DIR/bad_items.rs:25:5
   |
25 |     #[with]
   |     ^^^^^^^

error: `#[with]` can only be applied to an `fn`, a `trait`, or an `impl`.
  --> $DIR/bad_items.rs:20:5
   |
20 |     #[with]
   |     ^^^^^^^

error: `#[with]` can only be applied to an `fn`, a `trait`, or an `impl`.
  --> $DIR/bad_items.rs:15:5
   |
15 |     #[with]
   |     ^^^^^^^

error: `#[with]` can only be applied to an `fn`, a `trait`, or an `impl`.
  --> $DIR/bad_items.rs:10:5
   |
10 |     #[with]
   |     ^^^^^^^

error: `#[with]` can only be applied to an `fn`, a `trait`, or an `impl`.
 --> $DIR/bad_items.rs:6:1
  |
6 | #[with]
  | ^^^^^^^

error: `#[with]` can only be applied to an `fn`, a `trait`, or an `impl`.
 --> $DIR/bad_items.rs:3:1
  |
3 | #[with]
  | ^^^^^^^
